--- a/commerce/auctions/static/auctions/styles.css
+++ b/commerce/auctions/static/auctions/styles.css
@@ -1,3 +1,17 @@
 body {
     padding: 10px;
 }
+.container-create-form {
+    display: flex;
+    gap: 10px;
+}
+.right {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+.left {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
