--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -21,6 +21,15 @@
                 <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
             </li>
             {% if user.is_authenticated %}
+                <li>
+                    <a class="nav-link">Categories</a>
+                </li>
+                <li>
+                    <a class="nav-link">Watchlist</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="{% url 'createList' %}">Create Listing</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                 </li>
