--- a/commerce/auctions/templates/auctions/createList.html
+++ b/commerce/auctions/templates/auctions/createList.html
@@ -12,21 +12,21 @@
             {% csrf_token %}
             <div class="left">
                 <div class="mb-3">
-                    <input type="text" class="form-control" value="{{ title }}" name="title" placeholder="Title" autocomplete="off" autofocus required>
+                    <input type="text" class="form-control" value="{{ title }}" name="title" placeholder="Title" autocomplete="off" {% if not message %}autofocus{% endif %} required>
                 </div>
                 <div class="mb-3">
                     <input type="text" class="form-control" value="{{ description }}" name="description" placeholder="description" autocomplete="off" required>
                 </div>
                 <div class="mb-3">
-                    <input type="url" class="form-control" value="image" name="url" placeholder="Image URL" autocomplete="off" required>
+                    <input type="url" class="form-control" value="{{ image }}" name="url" placeholder="Image URL" autocomplete="off" required>
                 </div>
             </div>
             <div class="right">
                 <div class="mb-3">
-                    <input type="number" class="form-control" value="startPrice" name="price" placeholder="Starting Price" autocomplete="off" required>
+                    <input type="number" class="form-control" value="{{ startPrice }}" name="price" placeholder="Starting Price" autocomplete="off" required>
                 </div>
                 <div class="mb-3">
-                    <select class="form-control" name="categories" required>
+                    <select class="form-control" name="categories" {% if message %}autofocus{% endif %} required>
                         <option value="Categories">Categories</option>
                         {% for category in CATEGORIES %}
                             <option value="{{ category }}">{{ category }}</option>
