--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -22,7 +22,7 @@
             </li>
             {% if user.is_authenticated %}
                 <li>
-                    <a class="nav-link">Categories</a>
+                    <a class="nav-link" href="{% url 'categories' %}">Categories</a>
                 </li>
                 <li>
                     <a class="nav-link">Watchlist</a>
