--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="{% url 'categories' %}">Categories</a>
                 </li>
                 <li>
-                    <a class="nav-link">Watchlist</a>
+                    <a class="nav-link" href="{% url 'watchList' %}">Watchlist <span style="border: 1px solid gray; padding-left: 3px; padding-right: 3px; background-color: gray; color: white; border-radius: 5px;">0</span></a>
                 </li>
                 <li>
                     <a class="nav-link" href="{% url 'createList' %}">Create Listing</a>
