--- a/commerce/auctions/templates/auctions/watchList.html
+++ b/commerce/auctions/templates/auctions/watchList.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     <h2>Active Listings</h2>
-    
+
     {% for listing in Listings %}
         <div class="mb-3" id="container-active-listing">
             <div id="img">
@@ -22,14 +22,9 @@
                     Created {{ listing.created_at }}
                 </div>
                 <div style="margin-top: 5px; display: flex; gap: 5px;">
-                    {% if user.is_authenticated %}
-                        <a href="{% url 'view' listing.id %}" class="btn btn-secondary">View</a>
-                        <form action="{% url 'addWatchList' listing.id %}" method="post">
-                            <button class="btn btn-primary" style="display: flex; align-items: center;"><ion-icon style="font-size: 20px;" name="add-outline"></ion-icon>Add to Watchlist</button>
-                        </form>
-                        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-                        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-                    {% endif %}
+                    <form>
+                        <button class="btn btn-secondary">View</button>
+                    </form>
                 </div>
             </div>
         </div>
