--- a/commerce/auctions/templates/auctions/category.html
+++ b/commerce/auctions/templates/auctions/category.html
@@ -3,6 +3,11 @@
 {% block body %}
     <h2>Active Listings</h2>
 
+    {% if not Categoryone %}
+        <div style="text-align: center;">
+            No Auctions in this Category
+        </div>
+    {% endif %}
     {% for category in Categoryone %}
         <div class="mb-3" id="container-active-listing">
             <div id="img">
