--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -3,6 +3,14 @@
 {% block body %}
     <h2>Active Listings</h2>
     
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-dismissible alert-warning">
+                <strong>{{message}}</strong>
+            </div>
+        {% endfor %}
+    {% endif %}
+
     {% for listing in Listings %}
         <div class="mb-3" id="container-active-listing">
             <div id="img">
@@ -25,7 +33,8 @@
                     {% if user.is_authenticated %}
                         <a href="{% url 'view' listing.id %}" class="btn btn-secondary">View</a>
                         <form action="{% url 'addWatchList' listing.id %}" method="post">
-                            <button class="btn btn-primary" style="display: flex; align-items: center;"><ion-icon style="font-size: 20px;" name="add-outline"></ion-icon>Add to Watchlist</button>
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-primary" style="display: flex; align-items: center;"><ion-icon style="font-size: 20px;" name="add-outline"></ion-icon>Add to Watchlist</button>
                         </form>
                         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
                         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
