--- a/commerce/auctions/templates/auctions/viewWatchList.html
+++ b/commerce/auctions/templates/auctions/viewWatchList.html
@@ -2,6 +2,8 @@
 
 {% block body %}
     <h1>Listing: {{ listing.title }}</h1>
+    <span style="border: 1px solid gray; padding-left: 3px; padding-right: 3px; background-color: gray; color: white; border-radius: 5px;">WatchList</span>
+    <br>
     <a href="{{ listing.image }}" target="_blank"><img src="{{ listing.image }}" height="400"></a>
     <p>{{ listing.description }}</p>
     <h2>${{ listing.price }}</h2>
@@ -14,7 +16,7 @@
     </form>
     <h4>Details</h4>
     <ul>
-        <li>Listed by: <span style="color: blue;">{{ listing.userID }}</span></li>
+        <li>Listed by: <span style="color: blue;">{{ listing.auctionID.userID }}</span></li>
         <li>Category: {{ listing.category_id }}</li>
     </ul>
 {% endblock %}
