--- a/commerce/auctions/templates/auctions/categories.html
+++ b/commerce/auctions/templates/auctions/categories.html
@@ -1,13 +1,44 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
+</div>
+<ul class="nav">
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
+    </li>
+    {% if user.is_authenticated %}
+        <li>
+            <a class="nav-link" href="{% url 'categories' %}">Categories</a>
+        </li>
+        <li>
+            <a class="nav-link" href="{% url 'watchList' %}">WatchList {% if CountWatchList > 0 %}<span style="border: 1px solid gray; padding-left: 3px; padding-right: 3px; background-color: gray; color: white; border-radius: 5px;">{{ CountWatchList }}</span>{% endif %}</a>
+        </li>
+        <li>
+            <a class="nav-link" href="{% url 'createList' %}">Create Listing</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+        </li>
+    {% else %}
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">Log In</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'register' %}">Register</a>
+        </li>
+    {% endif %}
+</ul>
+<hr>
+    <p style="color: red;">
+        {{ message }}
+    </p>
     <form action="{% url 'categories' %}" method="post">
         {% csrf_token %}
         <div class="mb-3">
             <select class="form-control" name="allCategories" {% if message %}autofocus{% endif %} required>
                 <option value="Categories">Categories</option>
                 {% for category in CATEGORIES %}
-                    <option value="{{ category.id }}">{{ category }}</option>
+                    <option value="{{ category.categories }}">{{ category }}</option>
                 {% endfor %}
             </select>
         </div>
