--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -15,7 +15,7 @@
             {% else %}
                 Not signed in.
             {% endif %}
-        </div>
+        <!-- </div>
         <ul class="nav">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
@@ -42,7 +42,7 @@
                 </li>
             {% endif %}
         </ul>
-        <hr>
+        <hr> -->
         {% block body %}
         {% endblock %}
     </body>
