--- a/commerce/auctions/templates/auctions/view.html
+++ b/commerce/auctions/templates/auctions/view.html
@@ -1,20 +1,60 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
+
+</div>
+<ul class="nav">
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
+    </li>
+    {% if user.is_authenticated %}
+        <li>
+            <a class="nav-link" href="{% url 'categories' %}">Categories</a>
+        </li>
+        <li>
+            <a class="nav-link" href="{% url 'watchList' %}">WatchList {% if CountWatchList > 0 %}<span style="border: 1px solid gray; padding-left: 3px; padding-right: 3px; background-color: gray; color: white; border-radius: 5px;">{{ CountWatchList }}</span>{% endif %}</a>
+        </li>
+        <li>
+            <a class="nav-link" href="{% url 'createList' %}">Create Listing</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+        </li>
+    {% else %}
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">Log In</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'register' %}">Register</a>
+        </li>
+    {% endif %}
+</ul>
+<hr>
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-dismissible alert-warning">
+                <strong>{{message}}</strong>
+            </div>
+        {% endfor %}
+    {% endif %}
+
     <h1>Listing: {{ listing.title }}</h1>
     <a href="{{ listing.image }}" target="_blank"><img src="{{ listing.image }}" height="400"></a>
     <p>{{ listing.description }}</p>
     <h2>${{ listing.price }}</h2>
-    <p>0 bid(s) so far. Your bid is the current bid.</p>
-    <form>
+    <p>{{ countBid }} bid(s) so far. Your bid is the current bid.</p>
+    <form action="{% url 'bid' listing.id %}" method="post">
+        {% csrf_token %}
         <div class="mb-3">
-            <input type="text" class="form-control" name="bid" placeholder="Bid">
+            <input type="text" class="form-control" name="bid" placeholder="Bid" autocomplete="off" required>
         </div>
         <input type="submit" class="btn btn-primary">
     </form>
-    <h4>Details</h4>
-    <ul>
-        <li>Listed by: <span style="color: blue;">{{ listing.userID }}</span></li>
-        <li>Category: {{ listing.category_id }}</li>
-    </ul>
+    <div style="margin-top: 10px;">
+        <h4>Details</h4>
+        <ul>
+            <li>Listed by: <span style="color: blue;">{{ listing.userID }}</span></li>
+            <li>Category: {{ listing.category_id }}</li>
+        </ul>
+    </div>
 {% endblock %}
