--- a/commerce/auctions/templates/auctions/watchList.html
+++ b/commerce/auctions/templates/auctions/watchList.html
@@ -1,7 +1,49 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
+</div>
+<ul class="nav">
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
+    </li>
+    {% if user.is_authenticated %}
+        <li>
+            <a class="nav-link" href="{% url 'categories' %}">Categories</a>
+        </li>
+        <li>
+            <a class="nav-link" href="{% url 'watchList' %}">WatchList {% if CountWatchList > 0 %}<span style="border: 1px solid gray; padding-left: 3px; padding-right: 3px; background-color: gray; color: white; border-radius: 5px;">{{ CountWatchList }}</span>{% endif %}</a>
+        </li>
+        <li>
+            <a class="nav-link" href="{% url 'createList' %}">Create Listing</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+        </li>
+    {% else %}
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">Log In</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'register' %}">Register</a>
+        </li>
+    {% endif %}
+</ul>
+<hr>
     <h2>WatchList</h2>
+
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-dismissible alert-success">
+                <strong>{{message}}</strong>
+            </div>
+        {% endfor %}
+    {% endif %}
+
+    {% if not watchList %}
+        <div style="text-align: center;">
+            No Auctions in WatchList
+        </div>
+    {% endif %}
 
     {% for listing in watchList %}
         <div class="mb-3" id="container-active-listing">
@@ -9,8 +51,15 @@
                 <a href="{{ listing.image }}" target="_blank"><img src="{{ listing.image }}" class="responsive"></a>
             </div>
             <div class="mb-3" id="details">
-                <div>
-                    <h4>{{ listing.title }}</h3>
+                <div class="delete">
+                    <div>
+                        <h4>{{ listing.title }}</h3>
+                    </div>
+                    <div>
+                        <a href="{% url 'deleteWatchList' listing.id %}"><ion-icon name="trash-outline" class="deleteIcon"></ion-icon></a>
+                        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+                        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+                    </div>
                 </div>
                 <div>
                     <h5>Price: ${{ listing.price }}</h4>
