--- a/commerce/auctions/templates/auctions/category.html
+++ b/commerce/auctions/templates/auctions/category.html
@@ -1,7 +1,6 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-</div>
 <ul class="nav">
     <li class="nav-item">
         <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
@@ -29,7 +28,7 @@
     {% endif %}
 </ul>
 <hr>
-    <h2>Active Listings</h2>
+    <h2>Category Listings</h2>
 
     {% if not Categoryone %}
         <div style="text-align: center;">
@@ -57,6 +56,7 @@
                 <div style="margin-top: 5px; display: flex; gap: 5px;">
                     {% if user.is_authenticated %}
                         <a href="{% url 'view' category.id %}" class="btn btn-secondary">View</a>
+                        <a href="{% url 'comment' category.id %}" class="btn btn-secondary">Comment</a>
                         <form action="{% url 'addWatchList' category.id %}" method="post">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-primary" style="display: flex; align-items: center;"><ion-icon name="add-outline" style="font-size: 20px;"></ion-icon>Add to WatchList</button>
