--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -1,7 +1,6 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-</div>
 <ul class="nav">
     <li class="nav-item">
         <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
@@ -44,36 +43,62 @@
             No Auctions in Active Listings
         </div>
     {% endif %}
-    {% for listing in Listings %}
-        <div class="mb-3" id="container-active-listing">
-            <div id="img">
-                <a href="{{ listing.image }}" target="_blank"><img src="{{ listing.image }}" class="responsive"></a>
+
+    {% if user.is_authenticated %}
+        {% for listing in Listings %}
+            <div class="mb-3" id="container-active-listing">
+                <div id="img">
+                    <a href="{{ listing.image }}" target="_blank"><img src="{{ listing.image }}" class="responsive"></a>
+                </div>
+                <div class="mb-3" id="details">
+                    <div>
+                        <h4>{{ listing.title }}</h3>
+                    </div>
+                    <div>
+                        <h5>Price: ${{ listing.price }}</h4>
+                    </div>
+                    <div>
+                        <h6>{{ listing.description }}</h6>
+                    </div>
+                    <div>
+                        Created {{ listing.created_at }}
+                    </div>
+                    <div style="margin-top: 5px; display: flex; gap: 5px;">
+                            <a href="{% url 'view' listing.id %}" class="btn btn-secondary">View</a>
+                            <a href="{% url 'comment' listing.id %}" class="btn btn-secondary">Comment</a>
+                            <form action="{% url 'addWatchList' listing.id %}" method="post">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-primary" style="display: flex; align-items: center;"><ion-icon style="font-size: 20px;" name="add-outline"></ion-icon>Add to Watchlist</button>
+                            </form>
+                            <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+                            <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+                    </div>
+                </div>
             </div>
-            <div class="mb-3" id="details">
-                <div>
-                    <h4>{{ listing.title }}</h3>
+        {% endfor %}
+        <p style="text-align: center;"><a href="{% url 'index' %}" class="btn btn-secondary">TOP</a></p>
+    {% else %}
+        {% for limit in Limit5 %}
+            <div class="mb-3" id="container-active-listing">
+                <div id="img">
+                    <a href="{{ limit.image }}" target="_blank"><img src="{{ limit.image }}" class="responsive"></a>
                 </div>
-                <div>
-                    <h5>Price: ${{ listing.price }}</h4>
-                </div>
-                <div>
-                    <h6>{{ listing.description }}</h6>
-                </div>
-                <div>
-                    Created {{ listing.created_at }}
-                </div>
-                <div style="margin-top: 5px; display: flex; gap: 5px;">
-                    {% if user.is_authenticated %}
-                        <a href="{% url 'view' listing.id %}" class="btn btn-secondary">View</a>
-                        <form action="{% url 'addWatchList' listing.id %}" method="post">
-                            {% csrf_token %}
-                            <button type="submit" class="btn btn-primary" style="display: flex; align-items: center;"><ion-icon style="font-size: 20px;" name="add-outline"></ion-icon>Add to Watchlist</button>
-                        </form>
-                        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-                        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-                    {% endif %}
+                <div class="mb-3" id="details">
+                    <div>
+                        <h4>{{ limit.title }}</h3>
+                    </div>
+                    <div>
+                        <h5>Price: ${{ limit.price }}</h4>
+                    </div>
+                    <div>
+                        <h6>{{ limit.description }}</h6>
+                    </div>
+                    <div>
+                        Created {{ limit.created_at }}
+                    </div>
                 </div>
             </div>
-        </div>
-    {% endfor %}
+        {% endfor %}
+        <p style="text-align: center;"><a href="{% url 'login' %}">Sign In</a> To See All Auctions</p>
+    {% endif %}
 {% endblock %}
