--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -15,8 +15,8 @@
             {% else %}
                 Not signed in.
             {% endif %}
-        <!-- </div>
-        <ul class="nav">
+        </div>
+        <!-- <ul class="nav">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
             </li>
