--- a/commerce/auctions/templates/auctions/viewWatchList.html
+++ b/commerce/auctions/templates/auctions/viewWatchList.html
@@ -2,7 +2,6 @@
 
 {% block body %}
 
-</div>
 <ul class="nav">
     <li class="nav-item">
         <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
@@ -45,7 +44,7 @@
     <p>{{ listing.description }}</p>
     <h2>${{ listing.price }}</h2>
     <p>{{ countBid }} bid(s) so far. Your bid is the current bid.</p>
-    <form action="{% url 'watchListBid' listing.auctionID_id %}" method="post">
+    <form action="{% url 'bid' listing.auctionID_id %}" method="post">
         {% csrf_token %}
         <div class="mb-3">
             <input type="text" class="form-control" name="bid" autocomplete="off" placeholder="Bid" required>
