--- a/commerce/auctions/templates/auctions/view.html
+++ b/commerce/auctions/templates/auctions/view.html
@@ -1,34 +1,32 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-
-<ul class="nav">
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
-    </li>
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
+        </li>
     {% if user.is_authenticated %}
-        <li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'myAuctions' %}">My Auctions</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'categories' %}">Categories</a>
         </li>
-        <li>
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'watchList' %}">WatchList {% if CountWatchList > 0 %}<span style="border: 1px solid gray; padding-left: 3px; padding-right: 3px; background-color: gray; color: white; border-radius: 5px;">{{ CountWatchList }}</span>{% endif %}</a>
         </li>
-        <li>
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'createList' %}">Create Listing</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'winner' %}">Closed Auctions</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
         </li>
-    {% else %}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}">Log In</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'register' %}">Register</a>
-        </li>
     {% endif %}
-</ul>
-<hr>
+    </ul>
+    <hr>
     {% if messages %}
         {% for message in messages %}
             <div class="alert alert-dismissible alert-warning">
@@ -42,17 +40,21 @@
     <span style="border: 1px solid gray; padding-left: 3px; padding-right: 3px; background-color: gray; color: white; border-radius: 5px;">WatchList</span>
     <br>
     {% endif %}
-    <a href="{{ listing.image }}" target="_blank"><img src="{{ listing.image }}" height="400"></a>
+    <a href="/images/{{ listing.image }}" target="_blank"><img src="/images/{{ listing.image }}" height="400"></a>
     <p>{{ listing.description }}</p>
     <h2>${{ listing.price }}</h2>
-    <p>{{ countBid }} bid(s) so far. Your bid is the current bid.</p>
-    <form action="{% url 'bid' listing.id %}" method="post">
-        {% csrf_token %}
-        <div class="mb-3">
-            <input type="text" class="form-control" name="bid" placeholder="Bid" autocomplete="off" required>
-        </div>
-        <input type="submit" class="btn btn-primary" value="Place Bid">
-    </form>
+    <p>{{ countBid }} bid(s) so far. {% if not listing.userID == request.user %}{% if listing.close == False or listing.userID == request.user.id %}Your bid is the current bid.{% endif %}{% endif %}</p>
+    {% if not listing.userID == request.user %}
+        {% if listing.close == False %}
+            <form action="{% url 'bid' listing.id %}" method="post">
+                {% csrf_token %}
+                <div class="mb-3">
+                    <input type="text" class="form-control" name="bid" placeholder="Bid" autocomplete="off" required>
+                </div>
+                <input type="submit" class="btn btn-primary" value="Place Bid">
+            </form>
+        {% endif %}
+    {% endif %}
     <div style="margin-top: 10px;">
         <h4>Details</h4>
         <ul>
