--- a/commerce/auctions/templates/auctions/category.html
+++ b/commerce/auctions/templates/auctions/category.html
@@ -1,33 +1,32 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-<ul class="nav">
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
-    </li>
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
+        </li>
     {% if user.is_authenticated %}
-        <li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'myAuctions' %}">My Auctions</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'categories' %}">Categories</a>
         </li>
-        <li>
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'watchList' %}">WatchList {% if CountWatchList > 0 %}<span style="border: 1px solid gray; padding-left: 3px; padding-right: 3px; background-color: gray; color: white; border-radius: 5px;">{{ CountWatchList }}</span>{% endif %}</a>
         </li>
-        <li>
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'createList' %}">Create Listing</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'winner' %}">Closed Auctions</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
         </li>
-    {% else %}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}">Log In</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'register' %}">Register</a>
-        </li>
-    {% endif %}
-</ul>
-<hr>
+        {% endif %}
+    </ul>
+    <hr>
     <h2>Category Listings</h2>
 
     {% if not Categoryone %}
@@ -38,7 +37,7 @@
     {% for category in Categoryone %}
         <div class="mb-3" id="container-active-listing">
             <div id="img">
-                <a href="{{ category.image }}" target="_blank"><img src="{{ category.image }}" class="responsive"></a>
+                <a href="images/{{ category.image }}" target="_blank"><img src="images/{{ category.image }}" class="responsive"></a>
             </div>
             <div class="mb-3" id="details">
                 <div>
@@ -57,12 +56,14 @@
                     {% if user.is_authenticated %}
                         <a href="{% url 'view' category.id %}" class="btn btn-secondary">View</a>
                         <a href="{% url 'comment' category.id %}" class="btn btn-secondary">Comment</a>
+                        {% if not category.userID == request.user %}
                         <form action="{% url 'addWatchList' category.id %}" method="post">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-primary" style="display: flex; align-items: center;"><ion-icon name="add-outline" style="font-size: 20px;"></ion-icon>Add to WatchList</button>
                         </form>
                         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
                         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+                        {% endif %}
                     {% endif %}
                 </div>
             </div>
