--- a/commerce/auctions/templates/auctions/myAuctions.html
+++ b/commerce/auctions/templates/auctions/myAuctions.html
@@ -39,7 +39,7 @@
 
     {% if not myAuctions %}
         <div style="text-align: center;">
-            No Auctions in You Posted
+            No Auctions have been Posted
         </div>
     {% endif %}
     {% for listing in myAuctions %}
