--- a/commerce/auctions/templates/auctions/watchList.html
+++ b/commerce/auctions/templates/auctions/watchList.html
@@ -56,7 +56,7 @@
                     <div>
                         <form action="{% url 'delete' listing.id %}" method="post">
                             {% csrf_token %}
-                            <button style="border: none; background-color: white" type="submit" name="delete_watchList"><ion-icon name="trash-outline" class="deleteIcon"></ion-icon></button>
+                            <button style="border: none; background-color: white; outline: white;" type="submit" name="delete_watchList"><ion-icon name="trash-outline" class="deleteIcon"></ion-icon></button>
                             <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
                             <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
                         </form>
@@ -78,7 +78,7 @@
                 </div>
                 {% else %}
                 <div>
-                    SOLD OUT
+                    <p style="color: red; padding-top: 10px; padding-left: 10px;">SOLD OUT</p>
                 </div>
                 {% endif %}
             </div>
